# iptux

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  config.h.in  configure  configure.in  protocol
debian/: README.Debian  changelog  control  copyright  docs  iptux.1  iptux.desktop  iptux.install  iptux.manpages  rules  watch
debian/patches/: 00list  01-desktop_encoding.patch  01_desktop-patch.dpatch  01_ftbfs_amd64.dpatch  02_dfsg.dpatch  debian-changes-0.3.3-0ubuntu1  series
desktop/: Makefile.am  Makefile.in  iptux.desktop
icons/: Makefile.am  Makefile.in
pixmaps/: Makefile.am  Makefile.in
po/: POTFILES.in  en_GB.gmo  en_GB.po  iptux.pot  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
src/: AboutIptux.cpp  AboutIptux.h  Command.cpp  Command.h  Control.cpp  Control.h  CoreThread.cpp  CoreThread.h  DetectPal.cpp  DetectPal.h  DialogGroup.cpp  DialogGroup.h  DialogPeer.cpp  DialogPeer.h  GroupMenuBar.cpp  GroupMenuBar.h  HelpDialog.cpp  IptuxSetting.cpp  IptuxSetup.cpp  IptuxSetup.h  Log.cpp  Log.h  MainMenuBar.cpp  MainMenuBar.h  MainWindow.cpp  MainWindow.h  Makefile.am  Makefile.in  Pal.cpp  Pal.h  PalviewPopmenu.cpp  PalviewPopmenu.h  PeerMenuBar.cpp  PeerMenuBar.h  RecvFile.cpp  RecvFile.h  RevisePal.cpp  RevisePal.h  SendFile.cpp  SendFile.h  (+37 more)
