back = back.png title.png
icon = 0.png 1.png 2.png 3.png 4.png 5.png 6.png 7.png 8.png \
	9.png 10.png 11.png 12.png 13.png 14.png 15.png 16.png \
	17.png 18.png 19.png 20.png 21.png 22.png 23.png 24.png \
	25.png 26.png 27.png 28.png 29.png 30.png 31.png 32.png \
	33.png
tip = desk.png detect.png error.png finish.png folder.png fresh.png net.png \
	out.png recv.png regular.png send.png setup.png share.png trans.png
EXTRA_DIST = $(back) $(tip) $(icon)

backdir = $(datadir)/iptux/back
back_DATA = $(back)
icondir = $(datadir)/iptux/icon
icon_DATA = $(icon)
tipdir = $(datadir)/iptux/tip
tip_DATA = $(tip)
