back = back.png title.png
icon = Blowfish.png Bug.png Cow.png Daemon.png Dog.png Elephant.png Frog.png \
	Ghost.png Konqui.png Lion.png Monkey.png Penguin.png Pig.png qq.png \
	Rabbit.png Scream.png Teddybear.png Turtle.png tux.png
tip = desk.png detect.png error.png finish.png folder.png fresh.png hide.png net.png \
	out.png recv.png regular.png send.png setup.png share.png show.png trans.png
EXTRA_DIST = $(back) $(tip) $(icon)

backdir = $(datadir)/iptux/back
back_DATA = $(back)
icondir = $(datadir)/iptux/icon
icon_DATA = $(icon)
tipdir = $(datadir)/iptux/tip
tip_DATA = $(tip)
