back = back.png title.png
icon = Blowfish.png Bug.png Cow.png Daemon.png Dog.png Elephant.png Frog.png \
	Ghost.png Konqui.png Lion.png Monkey.png Penguin.png Pig.png qq.png \
	Rabbit.png Scream.png Teddybear.png Turtle.png tux.png
tip = cancel.png desk.png detect.png error.png find.png finish.png folder.png fresh.png \
	hide.png net.png out.png recv.png regular.png send.png setting.png share.png \
	show.png trans.png
EXTRA_DIST = $(back) $(tip) $(icon)

backdir = $(datadir)/pixmaps/iptux/back
back_DATA = $(back)
icondir = $(datadir)/pixmaps/iptux/icon
icon_DATA = $(icon)
tipdir = $(datadir)/pixmaps/iptux/tip
tip_DATA = $(tip)
